Simplify token info placeholders

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       <img src="assets/logo.png" alt="$SNIF Icon" style="height: 48px; width: 48px; border-radius: 50%; border: 1px solid #ccc;" />
       <div>
         <h2>$TRUMP <span class="price">$9.91</span></h2>
-        <div class="meta">Market Cap: $9.9B · Liquidity: $423K</div>
-        <div class="meta">Supply: 999M · Burned: 20% · Circulating: 79%</div>
-        <div class="meta">Dev Holdings: 3.2% · LP Provider: Yes · Past Tokens: 5</div>
+        <div class="meta">Market Cap:</div>
+        <div class="meta">Liquidity:</div>
+        <div class="meta">Supply:</div>
       </div>
   
 
