Remove floating search box

--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
   </div>
 
   <!-- Floating -->
-  <div id="floating-search" class="desktop-only hidden">
-    <input type="text" id="floatingInput" placeholder="Enter CA..." />
-    <button onclick="showResults(true)">Search</button>
-  </div>
+  <!-- Removed floating search box -->
   <div id="floating-button" class="mobile-only hidden" onclick="toggleMobileSearch()">🔍</div>
   <div id="mobile-search" class="mobile-only hidden">
     <input type="text" id="mobileInput" placeholder="Enter CA..." />
